<resources>
    <string name="app_name">Moguchi</string>
    <string name="greetings">Hello! Давай познакомимся, как тебя зовут?</string>

    <!-- Strings related to login -->
    <string name="e_mail">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration">Registration:</string>
    <string name="login_button">Login</string>

    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="next">Next</string>
    <string name="name">First name</string>
    <string name="last_name">Last name</string>
    <string name="status">Mother/Dad/Other</string>
    <string name="add_child">Add child:</string>
    <string name="years_old">Years</string>
    <string name="start_page_description">Great, we can start setting goals.</string>
    <string name="add_another_child">Add another child</string>
    <string name="welcome_description_1"><![CDATA[Вы создаете цели, которые ребенок должен достичь, например, <Новый велосипед>.]]></string>
    <string name="welcome_description_2">У каждой цели есть ключевые результаты, они же задачи, которые должны быть выполнены для достижения цели.</string>
    <string name="welcome_description_3_1">При выполнении каждой задачи ребенок будет видеть, насколько он близок к цели.</string>
    <string name="welcome_description_3_2">Схожая концепция под названием OKR применяется в таких компаниях, как Google.</string>
    <string name="start_journey">Start journey</string>
    <string name="sign_in_as_parent">Sign in as parent</string>
    <string name="registration_button">Registration</string>
    <string name="skip_button">Skip</string>
    <string name="child_welcome">Отлично, $name! Это приложение поможет тебе быстрее получить то, о чем ты мечтаешь.</string>
    <string name="sign_in_intent_for_parents">Попроси родителей войти в родительский аккаунт</string>
    <string name="connection_with_parents">Устанавить связь с родителем</string>
    <string name="password">Password</string>
    <string name="sign_in">Войти:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Выйти из аккаунта</string>
    <string name="how_it_works">Как это работает?</string>
    <string name="bottom_home">Дом</string>
    <string name="bottom_settings">Настройки</string>
    <string name="age">Возраст</string>
    <string name="web_client_id">868557684546-bk9a2umde9evges2mi6t9n47elnmg6hl.apps.googleusercontent.com</string>
    <string name="tasks_title">Задачи:</string>
    <string name="alternative_way">Or</string>
    <string name="add_task_text_button">Добавить задачу</string>
    <string name="moguchi_welcome_title">Добро пожаловать \nв Moguchi!</string>
    <string name="set_date_hint">Укажите дату</string>
    <string name="avatar">Аватар</string>
    <string name="set_child_name_hint">Введите имя ребенка</string>
    <string name="add_child_button_text">Добавить ребёнка</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="switch_to_parent">Передать родителю</string>
    <string name="switch_to_parent_mode_description">Чтобы перейти в режим родителя введите пароль</string>
    <string name="set_password_hint">Введите пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="welcome_to_moguchi">Добро пожаловать \nв Moguchi!</string>
    <string name="welcome_page_description">Выполняй задачи и достигай \nцели вместе с нами</string>
    <string name="completed_goals">Выполненные цели</string>
    <string name="complete_tasks">Выполняй задачи</string>
    <string name="complete_tasks_description">и получай баллы за каждую \nвыполненную задачу</string>
    <string name="points_received">Получено баллов</string>
    <string name="goal_title">Goal</string>
    <string name="task_completed">Задача выполнена</string>
    <string name="pull_to_complete">Потяни, чтобы завершить</string>
    <string name="delete_profile">Удаление профиля</string>
    <string name="delete_child_profile">Удалить профиль ребёнка?</string>
    <string name="delete_warning_description">Все цели и задачи ребёнка так же будут удалены</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Удалить аккаунт?</string>
    <string name="delete_account_description">Все цели и прогресс детей потеряются, \nвосстановить их не получится</string>
    <string name="parent_child_mode">Режим родителя и ребёнка</string>
    <string name="parent_child_mode_description">позволит ограничить доступ ребёнка \nк редактированию и созданию целей</string>
    <string name="goal_creation_description">Создайте цель для ребёнка, которую он должен достичь</string>
    <string name="children_counter">Ребенок:</string>
    <string name="name_goal">Название цели</string>
    <string name="goal_example_hint">Например, велосипед</string>
    <string name="points_to_achieve_goal">Количество баллов для достижения</string>
    <string name="points_total_warning">Не больше 10 баллов</string>
    <string name="skip">Пропустить</string>
    <string name="my_children_title">Мои дети</string>
    <string name="exit">Log out</string>
    <string name="yes">Yes</string>
    <string name="profile_title">Profile</string>
    <string name="my_children">My children</string>
    <string name="notifications">Notifications</string>
    <string name="delete_all_notifications">Delete all</string>
    <string name="empty_notifications">Уведомлений нет</string>
    <string name="add_child_title">Добавление ребёнка</string>
    <string name="set_password_description">Установите 4-х значный пароль, чтобы ограничить доступ ребёнку к редактированию целей и задач</string>
    <string name="new_goal">Новая цель</string>
    <string name="new_task">Новая задача</string>
    <string name="congrats">Отлично</string>
    <string name="edit">Редактирование</string>
    <string name="sign_in_google">Войти с помощью Google</string>
    <string name="create_goals_onboarding">Создавайте цели</string>
    <string name="creation_goal_onboarding_description">и отслеживайте успехи вашего \nребёнка вместе с нами</string>
    <string name="repeat_task">Повторение задачи</string>
    <string name="radio_every_day">Каждый день</string>
    <string name="radio_per_week">Несколько раз в неделю</string>
    <string name="radio_per_month">Несколько раз в месяц</string>
    <string name="days_of_month_to_repeat">В какие даты месяца повторять</string>
    <string name="set_date">Добавить дату</string>
    <string name="days_to_repeat">В какие дни повторять</string>
    <string name="monday_short">Пн</string>
    <string name="tuesday_short">Вт</string>
    <string name="wednesday_short">Ср</string>
    <string name="thursday_short">Чт</string>
    <string name="friday_short">Пт</string>
    <string name="saturday_short">Сб</string>
    <string name="sunday_short">Вс</string>
    <string name="when_to_stop">Когда закончить повторение</string>
    <string name="radio_never">Никогда</string>
    <string name="radio_on_specific_date">В определенную дату</string>
    <string name="radio_after_repeats">После нескольких повторений</string>
    <string name="set_counter_of_day">Укажите количество</string>
    <string name="new_goal_added">Добавлена новая цель</string>
    <string name="new_tasks_added">Новые задачи добавлены</string>
    <string name="switch_to_child">Передать ребёнку</string>
    <string name="switch_to_child_description">Выберете ребёнка, которому хотите передать \nтелефон</string>
    <string name="task_creation_welcome_description">Добавьте задачи, которые ребенок должен выполнить, чтобы достичь цели</string>
    <string name="points_goal_counter">Количество баллов</string>
    <string name="add_task_fab_button_text">Добавить задачу</string>
    <string name="set_tasks_onboarding">Ставьте задачи</string>
    <string name="set_tasks_onboarding_description">и настраивайте повторения задач \nпо своему усмотрению</string>
    <string name="task">Задача</string>
    <string name="task_example_hint">Например, помыть посуду</string>
    <string name="points_reward">Награда в баллах</string>
    <string name="barrier_points_task">Не больше 3 баллов</string>
    <string name="setup_repeating_task">Настроить повторение задачи</string>
    <string name="home_bottom">Home</string>
    <string name="switch_to_parent_bottom">To parent</string>
    <string name="switch_to_child_bottom">To child</string>
    <string name="add_goal_bottom">Добавить цель</string>
    <string name="top_app_profile_title">Profile</string>
    <string name="task_not_done">Not completed</string>
    <string name="task_done">Completed</string>
    <string name="see_all_tasks_button_text">Смотреть %d задач(и)</string>
    <string name="go_to_tasks_button_text">Перейти в управление задачами</string>
    <string name="current_total_goal_points">%1$d / %2$d</string>
    <string name="active_tasks">Active %d</string>
    <string name="completed_tasks">Completed %d</string>
    <string name="done">Done</string>
    <string name="error_goal_title">Присутствуют недопустимые символы либо пусто</string>
    <string name="child_name_edit_text_error">Имя содержит недопустимые символы либо не выбран аватар</string>
    <string name="new_tasks">New tasks</string>
    <string name="tasks_history">Tasks history</string>
    <string name="not_all_conditions_is_done">Выполните все условия</string>
    <string name="switch_to_parent_description">Для перехода в режим родителя необходимо ввести пароль</string>
    <string name="my_goals_title">Мои цели</string>
    <string name="password_error">Нужно установить код</string>
    <string name="msg_token_fmt">Проверка токена %s</string>
    <string name="child_password_notification_by_email">Отправили пароль ребенка на ваш E-mail</string>
    <string name="not_correct_child_password">Неверный пароль</string>
    <string name="reset_password_mail_instructions">На вашу почту %s были отправлены дальнейшие инструкции по восстановлению пароля</string>
    <string name="slash_symbol">/</string>
    <string name="active_goals_not_found">Активных целей нет</string>
    <string name="password_edit_text_error">Поле пусто</string>
    <string name="check_completed_task">Сделано, на проверку</string>
    <string name="on_check_status">На проверке</string>

</resources>